Version 1.1
===========

New features
------------

- Accidentals: sharp, double sharp, natural, flat, double flat.

- Chord (non-spacing) notes.

Bugs fixed
----------

- Better bar lines processing. Left and right bar lines from XML are
  merged to catch both voltas and repeats.

- Measures longer than whole note (like 12/8) are now supported.

- PHP 5.5+ is supported (Generator is now language internal class)

- better processing of some unsupported features
